# rss-feeds-scraper

./: README.md  pyproject.toml
.github/workflows/: scraping_workflow.yml  scrapy_workflow.yml
data/: 2024-04-03.json  2024-04-04.json  2024-04-05.json  2024-04-06.json  2024-04-07.json  2024-04-08.json  2024-04-09.json  2024-04-10.json  2024-04-11.json  2024-04-12.json  2024-04-13.json  2024-04-14.json  2024-04-15.json  2024-04-16.json  2024-04-17.json  2024-04-18.json  2024-04-19.json  2024-04-20.json  2024-04-21.json  2024-04-22.json  2024-04-23.json  2024-04-24.json  2024-04-25.json  2024-04-26.json  2024-04-27.json  2024-04-28.json  2024-04-29.json  2024-04-30.json  2024-05-01.json  2024-05-02.json  2024-05-03.json  2024-05-04.json  2024-05-05.json  2024-05-06.json  2024-05-07.json  2024-05-08.json  2024-05-09.json  2024-05-10.json  2024-05-11.json  2024-05-12.json  (+799 more)
scripts/: scraping.py
src/rss_feeds_scraper/: __init__.py  model.py  scrap.py
